feat: Add styling for the nav links to scale up when hover

--- a/css-in-depth/15-transforms/01-nav/style.css
+++ b/css-in-depth/15-transforms/01-nav/style.css
@@ -100,4 +100,11 @@ img {
   .nav-links__label {
     margin-left: 1em;
   }
+  .nav-links__icon {
+    transition: transform 0.2s ease-out;
+  }
+  .nav-links a:hover > .nav-links__icon,
+  .nav-links a:focus > .nav-links__icon {
+    transform: scale(1.3);
+  }
 }
