--- a/css-in-depth/15-transforms/01-nav/style.css
+++ b/css-in-depth/15-transforms/01-nav/style.css
@@ -99,6 +99,19 @@ img {
   }
   .nav-links__label {
     margin-left: 1em;
+    padding-right: 1em;
+
+    display: inline-block;
+
+    opacity: 0;
+    transform: translate(-1em);
+    transition: transform 0.4s cubic-bezier(0.2, 0.9, 0.3, 1.3),
+      opacity 0.4s linear;
+  }
+  .nav-links:hover .nav-links__label,
+  .nav-links a:focus > .nav-links__label {
+    opacity: 1;
+    transform: translate(0);
   }
   .nav-links__icon {
     transition: transform 0.2s ease-out;
