feat: Layout the card with flexbox for older browsers that not support Grid layout

--- a/css-in-depth/16-animations/02-page/style.css
+++ b/css-in-depth/16-animations/02-page/style.css
@@ -137,6 +137,19 @@ img {
 .flyin-grid {
   margin: 0 1rem;
 }
+@media (min-width: 30em) {
+  .flyin-grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 5rem;
+  }
+  .flyin-grid__item {
+    flex: 1 1 300px;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+    max-width: 600px;
+  }
+}
 .card {
   color: hsl(210, 15%, 20%);
 
