--- a/css-in-depth/16-animations/02-page/style.css
+++ b/css-in-depth/16-animations/02-page/style.css
@@ -149,6 +149,17 @@ img {
     margin-right: 0.5em;
     max-width: 600px;
   }
+  @supports (display: grid) {
+    .flyin-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-gap: 2em;
+    }
+    .flyin-grid__item {
+      max-width: initial;
+      margin: 0;
+    }
+  }
 }
 .card {
   color: hsl(210, 15%, 20%);
